# dumbfi

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  demo.toml  get_prices.py  go.mod  go.sum  main.go  main_test.go  pyproject.toml  sample_prices.csv  sqlc.yaml
backend/: main.go
backend/backtester/: backtester.go
backend/marketdata/eodhd/: eodhd.go  eodhd_test.go
backend/marketdata/risk_model/: risk_model.go
backend/utils/: utils_test.go
backtester/: backtester_test.go
bt/: bt.go  bt_test.go  local.db
cli/: package-lock.json  package.json
cli/source/: app.tsx
cli/src/: events.ts  portfolio-logic.ts  state-manager.ts  types.ts
cli/src/components/: DisclaimerScreen.tsx  PortfolioDisplay.tsx
cmd/api/: main.go
cmd/demo/: main.go
cmd/desktop/: main.go
cmd/tui/: dumbfi.db  main.go  schema.sql
cmd/web/: main.go
data/: prices.csv
data/risk_model/: assets.json  covariance_matrix.csv  expected_returns.json  metadata.json
db/: models.go  querier.go  queries.sql.go
dumbfi/: app_ideas.txt  dumbbt.py
fidata/: prices.go  risk_model.go
frontend/: config.py  main.py  widgets.py
game/: __init__.py  __main__.py  config.py
go/: go.mod
go/cmd/backtest/: main.go
go/cmd/optimizer/: main.go
go/finance/: market.go  optimizer.go  optimizer_test.go  portfolio.go
go/games/: .gitkeep
ink-cli/src/: app.tsx  utils.ts
ink-cli/src/components/: RebalanceScreen.tsx  ResultsScreen.tsx
internal/database/: database.go  database_test.go  db.go  healthcheck.go  models.go  querier.go  queries.sql  queries.sql.go  schema.sql
internal/server/: server.go
pb_public/: index.html  script.js  styles.css
public/: script.js  styles.css
python/: pyproject.toml  pytest.ini
python/dumbfi/: __init__.py  config.py  dumbbt.py  dumbdb.py  widgets.py
python/dumbfi/dashboard/: __init__.py  app.py  data.py
python/dumbfi/finance/: optimization.py  portfolio.py  risk.py  tax_lots.py
python/games/: __init__.py
python/games/pyxel_trading/: __main__.py  config.py
python/notebooks/: factor_analysis.py  modern_portfolio_theory.py
python/scripts/: download_prices.py  generate_risk_model.py
python/tests/: __init__.py  test_dumbbt.py  test_dumbfi.py
python/tests/integration/: __init__.py
python/tests/unit/: test_portfolio_helper.py  test_utils_date.py  test_utils_price.py
rust/dumbbt/: Cargo.toml
rust/dumbbt/src/: lib.rs  main.rs
rust/dumbbt/tests/: main_test.rs
rustbt/: Cargo.toml  README.md  demo.toml
rustbt/src/: lib.rs  main.rs
scripts/: download_prices.py  download_stock_prices.py  generate_risk_model.py
sqlc/: sqlc.yaml
sqlc/db/: health.sql.go  models.go  querier.go  query.sql.go
sqlc/models/: models.go  querier.go  query.sql.go
sqlc/queries/: health.sql
sqlc/query/: query.sql
sqlc/schema/: schema.sql
src/: lib.rs  main.rs  py_bindings.rs
src/dumbfi/: __init__.py  app.py  config.py  dumbdb.py  market.py  utils.py  widgets.py
src/dumbfi/config/: __init__.py  game_config.py  ui_config.py
src/dumbfi/finance/: __init__.py  data.py  portfolio.py  risk.py
src/dumbfi/games/: __init__.py  trading_sim.py
tests/: conftest.py  main_test.rs  test_dumbbt.py
tests/integration/: test_finance_library.py  test_game_mechanics.py
tests/unit/: __init__.py  test_config_validation.py  test_utils_format.py
typescript/: package.json
typescript/src/: app.tsx  commands.ts  utils.ts
typescript/src/components/: CommandPrompt.tsx  DemoApp.tsx  HelpScreen.tsx  RiskSelection.tsx  SimulationScreen.tsx  WelcomeScreen.tsx
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: index.html  main.js
utils/: utils.go
