[project]
name = "dumbfi"
version = "0.0.0"
description = ""
readme = "README.md"
authors = [{ name = "Ben Cutrell", email = "bcutrell13@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pyxel>=2.3.17",
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "lxml>=5.3.1",
    "yfinance>=0.2.57",
    "requests-cache>=1.2.1",
    "requests-ratelimiter>=0.7.0",
    "pyportfolioopt>=1.5.6",
    "cvxpy>=1.6.5",
]

[project.scripts]
dumbfi = "dumbfi:main"

[tool.maturin]
module-name = "dumbfi._core"
python-packages = ["dumbfi"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv.scripts]
test = "python -m pytest {args}"
cov = "python -m pytest --cov=src --cov-report=html {args}"
lint = "ruff check --fix src tests && ruff format src tests && mypy src"
check = "ruff check src tests && ruff format --check src tests && mypy src"
notebook = "jupyter notebook {args}"
