[project]
name = "dumbfi"
version = "0.0.0"
description = ""
readme = "README.md"
authors = [{ name = "Ben Cutrell", email = "bcutrell13@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pyxel>=2.3.17",
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "lxml>=5.3.1",
    "yfinance>=0.2.57",
    "requests-cache>=1.2.1",
    "requests-ratelimiter>=0.7.0",
    "pyportfolioopt>=1.5.6",
    "cvxpy>=1.6.5",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "scikit-learn>=1.3.0",
]

notebooks = [
    "marimo>=0.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]

[project.scripts]
dumbfi = "dumbfi:main"

[tool.maturin]
module-name = "dumbfi._core"
python-packages = ["dumbfi"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "slow: Tests that take a long time to run",
    "requires_data: Tests that require market data files",
    "requires_display: Tests that require display/GUI components",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | target
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pyxel.*",
    "yfinance.*",
    "pypfopt.*",
    "cvxpy.*",
    "requests_cache.*",
    "requests_ratelimiter.*",
    "pyrate_limiter.*",
]
ignore_missing_imports = true
